--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,11 +1,9 @@
 FROM saoneth/plex-custom-audio:builder as builder
-ADD go.mod /build/
-ADD go.sum /build/
-ADD mapper.go /build/
-ADD transcoder.go /build/
-RUN go build -x -ldflags '-s -w -extldflags "-static -static-libgcc -static-libstdc++"' -tags 'osusergo static_build' -o 'bin/Plex Custom Audio Mapper' mapper.go
-RUN go build -x -ldflags '-s -w -extldflags "-static -static-libgcc -static-libstdc++"' -tags 'osusergo static_build' -o 'bin/Plex Transcoder' transcoder.go
-RUN upx -9 'bin/Plex Custom Audio Mapper'
+WORKDIR /go/src/github.com/saoneth/plex-custom-audio/
+COPY . /go/src/github.com/saoneth/plex-custom-audio/
+RUN mkdir bin/ && go build -x -ldflags '-s -w -extldflags "-static -static-libgcc -static-libstdc++"' -o /build/ ./...
+#RUN mkdir bin/ && go build -x -ldflags '-s -w -extldflags "-static -static-libgcc -static-libstdc++"' -tags 'osusergo static_build' -o /build/ ./...
+RUN upx -9 '/build/Plex Custom Audio Mapper'
 
 FROM scratch
-COPY --from=builder /build/bin/* /
+COPY --from=builder /build/* /
