--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+Plex Custom Audio Transcoder
 Plex Custom Audio Mapper
-Plex Transcoder
-Preferences.xml
+Plex Custom Audio Transcoder.exe
+Plex Custom Audio Mapper.exe
